# Olimp

./: .gitignore  CMakeLists.txt  README.md  main.c
src/core/: core.c  core.h
src/core/PoolAllocator/: allocator.c
